--- a/app/index.scss
+++ b/app/index.scss
@@ -262,14 +262,22 @@
 		}
 		p {
 			font-family: MyriadProRegular;
-			color: #000;
+			color: #6f6f6f;
 			padding-top: 10px;
 			.pricered {
-				color: red;
+				color: #fff ;
 				text-decoration: line-through;
+				font-family: MyriadProBold;
+				background-color: #ea4040;
+				padding: 2px 5px;
+				border-radius: 5px;
 			}
 			.pricegreen {
-				color: #1ada1a;
+				color: #fff;
+				font-family: MyriadProBold;
+				background-color: #2f902f;
+				padding: 2px 5px;
+				border-radius: 5px;
 			}
 		}
 	}
@@ -327,7 +335,7 @@
 		}
 		& a {
 			margin-top: 15px;
-			padding: 5px 30px;			
+			padding: 8px 30px;			
 			text-align: center;
 			background-color: #004B8D;
 			
@@ -366,7 +374,7 @@
 		margin-top: 40px;
 
 		a {
-			padding: 5px 25px;
+			padding: 8px 25px;
 			height: 20px;
 			background-color: #004B8D;
 			
