--- a/app/index.scss
+++ b/app/index.scss
@@ -254,6 +254,7 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
+		will-change: transform;
 		img {
 			width: 170px;
 			height: auto;
@@ -322,6 +323,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		will-change: transform;
 		
 		img {
 			padding-top: 20px;
