--- a/app/index.scss
+++ b/app/index.scss
@@ -28,8 +28,16 @@
 	
 	z-index: 3;
 	position: relative;
-	
-	
+
+	&__logo {
+		padding: 10px 0 0 20px;
+	}
+}
+
+.logo {
+	background-image: url(./static/novwhite.png);
+	width: 151px;
+	height: 50px;
 }
 
 .img {
@@ -38,14 +46,8 @@
 	background-repeat: no-repeat;
 }
 
-.logo {
-	background-image: url(./static/novwhite.png);
-	width: 151px;
-	height: 50px;
-}
-.logo__header {
-	padding: 10px 0 0 20px;
-}
+
+
 
 /* Стили бургера*/
 
@@ -159,30 +161,29 @@
 	width: 100%;
     height: 493px;
     overflow: hidden;
-   
+	&__background {
+		background-image: url(./static/zavod.jpg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: -65px center;
+		height: 493px;
+		width: 110%;
+		filter: brightness(0.9);
+	}
+	&__tagline {
+		position: relative;
+		z-index: 2;
+		margin: -320px auto 0;
+		width: 100%;
+		background-color: #004B8D;
+		height: 100px;
+		opacity: 0.8;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 }
-.fon__oneblock {
-	background-image: url(./static/zavod.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: -65px center;
-	height: 493px;
-	width: 110%;
-	filter: brightness(0.9);
-}
-.slogan__oneblock {
-	position: relative;
-	z-index: 2;
-	margin: -320px auto 0;
-	width: 100%;
-	background-color: #004B8D;
-	height: 100px;
-	opacity: 0.8;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.zagolovok {
+.title {
 	font-family: MyriadProRegular;
 	font-size: 20px;
 	text-align: center;
@@ -230,19 +231,15 @@
 	align-items: center;
 	
 	padding-bottom: 34px;
-	.zagolovok__treeblock {
-		
+	&__title {
 		margin-top: 40px;
-		
-		
 	}
 
-	 .setka__treeblock {
+	.treeblock__grid {
 		width: 80%;
-
 	}
 
-	.elemsetki {
+	.elemgrid {
 		width: 100%;
 		padding: 25px 0;
 		border: 1px solid #b3acac42;
@@ -282,13 +279,9 @@
 			}
 		}
 	}
-	.title__elemsetki {
+	&__title {
 		font-size: 18px;
 		font-weight: normal;
-
-
-
-
 	}
 }
 
@@ -300,7 +293,7 @@
 	flex-direction: column;
 	
 	padding-bottom: 34px;
-	.zagolovok__fourblock {
+	&__title {
 		
 		margin-top: 40px;
 		color: #fff;
@@ -308,12 +301,12 @@
 	}
 
 
-	.setka__fourblock {
+	&__grid {
 		width: 80%;
 
 	}
 
-	.elemsetki {
+	.elemgrid {
 		width: 100%;
 		padding-bottom: 20px;
 		
@@ -360,10 +353,10 @@
 	text-align: center;
 	
 	padding-bottom: 34px;
-	.zagolovok__fiveblock {
+	&__title {
 		margin-top: 40px;
 	}
-	.phone {
+	&__phone {
 		margin-top: 20px;
 		font-family: MyriadProRegular;
 	}
@@ -372,7 +365,7 @@
 		font-family: MyriadProRegular;
 		padding: 0 20px;
 	}
-	.button {
+	&__button {
 		margin-top: 40px;
 
 		a {
@@ -399,7 +392,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	.logo__footer {
+	&__logo {
 		padding: 20px 0 0;
 		.log_footer {
 			width: 120px;
