--- a/app/index.scss
+++ b/app/index.scss
@@ -1,419 +1,14 @@
-@import "./scss/global/_normalize.scss";
+@import "scss/global/_normalize.scss";
+@import "scss/_fonts.scss";
 
-@font-face {
-		font-family: "MyriadProRegular";
-		src: url("./fonts/MyriadProRegular/MyriadProRegular.eot");
-		src: url("./fonts/MyriadProRegular/MyriadProRegular.eot?#iefix")format("embedded-opentype"),
-		url("./fonts/MyriadProRegular/MyriadProRegular.woff") format("woff"),
-		url("./fonts/MyriadProRegular/MyriadProRegular.ttf") format("truetype");
-		font-style: normal;
-		font-weight: normal;
-}
-@font-face {
-		font-family: "MyriadProBold";
-		src: url("./fonts/MyriadProBold/MyriadProBold.eot");
-		src: url("./fonts/MyriadProBold/MyriadProBold.eot?#iefix")format("embedded-opentype"),
-		url("./fonts/MyriadProBold/MyriadProBold.woff") format("woff"),
-		url("./fonts/MyriadProBold/MyriadProBold.ttf") format("truetype");
-		font-style: normal;
-		font-weight: normal;
-}
+@import "scss/header.scss";
+@import "scss/oneblock.scss";
+@import "scss/twoblock.scss";
+@import "scss/treeblock.scss";
+@import "scss/fourblock.scss";
+@import "scss/fiveblock.scss";
+@import "scss/footer.scss";
 
-.header {
-	width: 100%;
-	background-color: #004B8D;
-	height: 75px;
-	display: flex;
-	justify-content: space-between;
-	z-index: 3;
-	position: relative;
-
-	&__logo {
-		padding: 10px 0 0 20px;
-	}
-}
-
-.logo {
-	background-image: url(./static/novwhite.png);
-	width: 151px;
-	height: 50px;
-}
-
-.img {
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-}
-
-
-
-
-/* Стили бургера*/
-
-/* скрываем чекбокс */
-#menu__toggle {
-	opacity: 0;
-}
-
-/* стилизуем кнопку */
-.menu__btn {
-	display: flex; 
-	position: relative;
-	width: 24px;
-	height: 13.5px;
-	cursor: pointer;
-	z-index: 1;
-	margin: 20px 30px 0 0;
-
-  
-}
-/* добавляем "гамбургер" */
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 3px;
-	background-color: #EF8032;
-}
-.menu__btn > span::before {
-	content: '';
-	top: -7px;
-	width: 100%;
-}
-.menu__btn > span::after {
-	content: '';
-	top: 7px;
-	width: 100%;
-}
-/* контейнер меню */
-.menu__box {
-	display: block;
-	position: fixed;
-	display: none;
-	position: absolute;
-	width: 100%;
-	margin-top: 18px;
-	list-style: none;
-	text-align: center;
-	background-color: #003b6f;
-	left:0;
-	z-index: 3;
-	border-top: 2px solid #427aab;
-}
-/* элементы меню */
-.menu__item {
-	display: block;
-	padding: 24px 24px;
-	color: #FFF;
-	font-family: 'Roboto', sans-serif;
-	font-style: normal;
-	font-size: 22px;
-	font-weight: 300;
-	line-height: 59px;
-	text-align: center;
-	text-decoration: none;
-}
-.menu__item:hover {
-	background-color: #004B8D;
-}
-
-
-                                 /*Открытие и анимация в крестик*/
-
-#menu__toggle:checked ~ .menu__btn > span {
-	transform: rotate(45deg);
-}
-#menu__toggle:checked ~ .menu__btn > span::before {
-	top: 0;
-	transform: rotate(0);
-	width: 100%;
-}
-#menu__toggle:checked ~ .menu__btn > span::after {
-	top: 0;
-	transform: rotate(90deg);
-	width: 100%;
-}
-#menu__toggle:checked ~ .menu__box {
-	display: block;
-	left: 0;
-}
-
-/*Немного анимации*/
-
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-	transition-duration: .25s;
-}
-.menu__box {
-	transition-duration: .25s;
-}
-.menu__item {
-	transition-duration: .25s;
-}
-/*Конец Стилизации Меню */
-
-/*Первый блок*/
-.oneblock {
-	width: 100%;
-    height: 493px;
-    overflow: hidden;
-	&__background {
-		background-image: url(./static/zavod.jpg);
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: -65px center;
-		height: 493px;
-		width: 110%;
-		filter: brightness(0.9);
-	}
-	&__tagline {
-		position: relative;
-		z-index: 2;
-		margin: -320px auto 0;
-		width: 100%;
-		background-color: #004B8D;
-		height: 100px;
-		opacity: 0.8;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-}
-.title {
-	font-family: MyriadProRegular;
-	font-size: 20px;
-	text-align: center;
-	
-	&__oneblock{
-		line-height: 50px;
-		color: #fff;
-	}
-	&__twoblock {
-		padding-bottom: 50px;
-	}
-}
-/*Второй блок*/
-.twoblock {
-	width: 100%;
-	height: 568px;
-	background-color: #004B8D;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	color: #fff;
-	align-items: center;
-	
-}
-.text {
-	font-family: MyriadProRegular;
-	&__twoblock {
-		padding: 0 40px;
-		p{
-			padding-top: 10px;
-			padding-bottom: 30px;
-		}
-		h3 {
-			color: #EF8032;
-			font-family: MyriadProBold;
-		}
-	}
-}
-
-.treeblock {
-	width: 100%;
-	background-color: #f0f0f0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	
-	padding-bottom: 34px;
-	&__title {
-		margin-top: 40px;
-	}
-
-	.treeblock__grid {
-		width: 80%;
-	}
-
-	.elemgrid {
-		width: 100%;
-		padding: 25px 0;
-		border: 1px solid #b3acac42;
-		
-		border-radius: 8px;
-		margin: 34px 0;
-		background-color: #fff;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		will-change: transform;
-		img {
-			width: 170px;
-			height: auto;
-			border-radius: 5px;
-			padding: 15px 0;
-		}
-		p {
-			font-family: MyriadProRegular;
-			color: #6f6f6f;
-			padding-top: 10px;
-			.pricered {
-				color: #fff ;
-				text-decoration: line-through;
-				font-family: MyriadProBold;
-				background-color: #ea4040;
-				padding: 2px 5px;
-				border-radius: 5px;
-			}
-			.pricegreen {
-				color: #fff;
-				font-family: MyriadProBold;
-				background-color: #2f902f;
-				padding: 2px 5px;
-				border-radius: 5px;
-			}
-		}
-	}
-	&__title {
-		font-size: 18px;
-		font-weight: normal;
-	}
-}
-
-.fourblock {
-	width: 100%;
-	background-color: #004B8D;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	
-	padding-bottom: 34px;
-	&__title {
-		
-		margin-top: 40px;
-		color: #fff;
-		
-	}
-
-
-	&__grid {
-		width: 80%;
-
-	}
-
-	.elemgrid {
-		width: 100%;
-		padding-bottom: 20px;
-		
-		border-radius: 8px;
-		margin: 34px 0;
-		background-color: #fff;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		will-change: transform;
-		
-		img {
-			padding-top: 20px;
-			width: 150px;
-			height: auto;
-			
-		}
-		p {
-			font-family: MyriadProRegular;
-			padding-top: 10px;
-		}
-		a {
-			margin-top: 15px;
-			padding: 8px 30px;			
-			text-align: center;
-			background-color: #004B8D;
-			
-			border-radius: 8px;
-			color: #fff;
-			font-family: MyriadProRegular;
-			cursor: pointer;
-		}
-		a:hover {
-			background-color: #177ed8;
-		}
-	}
-}
-.fiveblock {
-	width: 100%;
-	background-color: #fff;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	
-	padding-bottom: 34px;
-	&__title {
-		margin-top: 40px;
-	}
-	&__phone {
-		margin-top: 20px;
-		font-family: MyriadProRegular;
-	}
-	p {
-		margin-top: 20px;
-		font-family: MyriadProRegular;
-		padding: 0 20px;
-	}
-	&__button {
-		margin-top: 40px;
-
-		a {
-			padding: 8px 25px;
-			height: 20px;
-			background-color: #004B8D;
-			
-			border-radius: 8px;
-			color: #fff;
-			font-family: MyriadProRegular;
-			cursor: pointer;
-		}
-		a:hover {
-			background-color: #177ed8;
-		}
-	}
-}
-.footer {
-	width: 100%;
-	background-color: #004B8D;
-	
-	color: #fff;
-	font-family: MyriadProRegular;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	&__logo {
-		padding: 20px 0 0;
-		.log_footer {
-			width: 120px;
-			height: 39.74px;
-			border-bottom: 1px solid #fff;
-
-		}
-	}
-	p {
-		padding: 15px 20px 20px;
-		text-align: center;
-		font-size: 12px;
-		color: #cecece;
-	}
-
-	.logo-bel {
-		background-image: url(./static/belzonalogo_en_w.png);
-		width: 100px;
-		height: 45.25px;
-		background-size: contain;
-		background-position: center;
-		background-repeat: no-repeat;
-		border-bottom: 1px solid #fff;
-	}
+html {
+	scroll-behavior: smooth;
 }
