--- a/app/scss/treeblock.scss
+++ b/app/scss/treeblock.scss
@@ -39,6 +39,7 @@
 	will-change: transform;
 		@media screen and (min-width: 765px) {
 			width: 30%;
+			max-width: 250px;
 		}
 		@media screen and (min-width: 1350px) {
 			width: 23%;
