--- a/app/scss/global/_normalize.scss
+++ b/app/scss/global/_normalize.scss
@@ -3,6 +3,7 @@ html {
   -webkit-font-smoothing: antialiased;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
