--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -106,7 +106,7 @@
 	display: block;
 	padding: 24px 24px;
 	color: #FFF;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'MyriadProRegular', sans-serif;
 	font-style: normal;
 	font-size: 22px;
 	font-weight: 300;
