--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -1,7 +1,7 @@
 .footer {
 	width: 100%;
 	background-color: #004B8D;
-	
+	background: linear-gradient(180deg, rgba(0,71,134,1) 0%, rgba(0,50,95,1) 100%);
 	color: #fff;
 	font-family: MyriadProRegular;
 	display: flex;
