--- a/app/scss/fourblock.scss
+++ b/app/scss/fourblock.scss
@@ -1,36 +1,27 @@
 .fourblock {
 	width: 100%;
 	background-color: #004B8D;
+	background: linear-gradient(90deg, rgba(0,50,95,1) 0%, rgba(0,71,134,1) 20%, rgba(0,71,134,1) 50%, rgba(0,71,134,1) 80%, rgba(0,50,95,1) 100%);
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	
-	padding-bottom: 34px;
+	padding: 0 50px 34px 50px;
+	box-sizing: border-box;
 	&__title {
-		
 		margin-top: 40px;
 		color: #fff;
-		
 	}
 
 
 	&__grid {
-		width: 80%;
-		@media screen and (min-width: 765px) {
-			width: 90%;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-around;
-		}
-
+		width: 100%;
 	}
 
 	.elemgrid {
 		width: 100%;
 		padding-bottom: 20px;
-		
 		border-radius: 8px;
-		margin: 34px 0;
+		margin: 34px 5px;
 		background-color: #fff;
 		display: flex;
 		flex-direction: column;
@@ -38,6 +29,9 @@
 		will-change: transform;
 		@media screen and (min-width: 765px) {
 			width: 30%;
+			min-width: 200px;
+			max-width: 250px;
+			margin: 34px 20px;
 		}
 		@media screen and (min-width: 1350px) {
 			width: 23%;
