--- a/app/scss/oneblock.scss
+++ b/app/scss/oneblock.scss
@@ -14,9 +14,7 @@
 	&__tagline {
 		position: relative;
 		width: 100%;
-		background-color: #1f2a33;
 		height: 100px;
-		opacity: 0.8;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -25,6 +23,19 @@
 		p {
 			font-size: 13px;
 			color: #fff;
+		}
+		&__button {
+			margin-top: 50px;
+			padding: 8px 25px;
+			height: 20px;
+			background-color: #004B8D;
+			border-radius: 8px;
+			color: #fff;
+			font-family: MyriadProRegular;
+			cursor: pointer;
+			&:hover {
+				background-color: #177ed8;
+			}
 		}
 	}
 }
