--- a/app/scss/modal.scss
+++ b/app/scss/modal.scss
@@ -26,6 +26,9 @@
 	@media screen and (min-width: 765px) {
 		width: 50%;
 	}
+	@media screen and (min-width: 1350px) {
+			width: 30%;
+		}
 	form {
 		margin: 20px 0;
 		font-family: MyriadProRegular;
