--- a/app/scss/treeblock.scss
+++ b/app/scss/treeblock.scss
@@ -71,11 +71,10 @@
 	}
 		a {
 			display: block;
+			width: fit-content;
 			margin: 15px auto 0;
-			width: 80px;
 			text-align: center;
 			padding: 8px 25px;
-			height: 20px;
 			background-color: #004B8D;
 			border-radius: 8px;
 			color: #fff;
