--- a/app/index.scss
+++ b/app/index.scss
@@ -1,4 +1,6 @@
 @import "scss/global/_normalize.scss";
+@import "scss/global/_main.scss";
+
 @import "scss/_fonts.scss";
 
 @import "scss/header.scss";
