--- a/app/scss/oneblock.scss
+++ b/app/scss/oneblock.scss
@@ -2,6 +2,7 @@
 .oneblock {
 	width: 100%;
 	height: 313px;
+	padding-top: 75px;
 	overflow: hidden;
 	background-image: url(./static/zavod.jpg);
 	background-size: cover;
@@ -27,7 +28,6 @@
 		&__button {
 			margin-top: 50px;
 			padding: 8px 25px;
-			height: 20px;
 			background-color: #004B8D;
 			border-radius: 8px;
 			color: #fff;
