--- a/app/scss/treeblock.scss
+++ b/app/scss/treeblock.scss
@@ -4,8 +4,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 0 50px 34px 50px;
 	box-sizing: border-box;
+	padding-bottom: 40px;
 	&__title {
 		margin-top: 40px;
 	}
@@ -17,6 +17,7 @@
 	&__title {
 		font-size: 18px;
 		font-weight: normal;
+		margin-bottom: 40px;
 	}
 } 
 .elemgrid {
@@ -30,23 +31,20 @@
 	align-items: center;
 	justify-content: center;
 	will-change: transform;
-	margin: 34px 0px;
 	min-width: 200px;
+	margin-bottom: 20px;
 		@media screen and (min-width: 765px) {
 			width: 30%;
 			min-width: 200px;
 			max-width: 250px;
-			margin: 34px 20px;
 		}
 		@media screen and (min-width: 1350px) {
 			width: 23%;
 		}
 	img {
 		width: 70%;
-		
 		border-radius: 5px;
 		padding: 15px 0;
-		margin: 0 auto;
 	}
 	p {
 		font-family: MyriadProRegular;
