--- a/app/scss/modal.scss
+++ b/app/scss/modal.scss
@@ -1,8 +1,9 @@
 
 .popup {
-	position: relative;
+	display: none;
 	width: 90%;
 	padding: 20px;
+	padding-right: 40px;
 	background: #fff;
 	border: 1px solid #004B8D;
 	border-radius: 4px;
@@ -18,6 +19,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		justify-content: center;
 	}
 	&__input {
 		width: 80%;
